kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartoonapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartoonapi
  template:
    metadata:
      labels:
        app: cartoonapi
    spec:
      containers:
        - name: cartoonapi
          image: 1t1scool/cartoonapi:latest
          ports:
            - containerPort: 5000
