kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cartoonapi-service
spec:
  selector:
    app: cartoonapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
